<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Checklist</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_load_sample_data">Load Sample Data</string>
    <string name="load_sample_data_title">Load Sample Data</string>
    <string name="load_sample_data_message">All your data will be deleted, are you sure?</string>
    <string name="button_ok">OK</string>
    <string name="button_cancle">Cancle</string>
    <string name="button_delete">Delete</string>
    <string name="button_new">New</string>
    <string name="button_filter">Filter</string>
    <string name="message_please_wait">Please wait..</string>
    <string name="message_processing">Processing</string>
    <string name="main_menu_title">Main Menu</string>
    <string name="menu_checklist">Checklist</string>
    <string name="menu_bpartner">BPartner</string>
    <string name="menu_auditor">Auditor</string>
    <string name="menu_sheet">Sheet</string>
    <string name="left_and_right">Left and Right</string>
    <string name="business_partner">Business Partner</string>
    <string name="checklist">Checklist</string>
    <string name="company_name">Company Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="button_save">Save</string>
    <string name="button_discard">Discard</string>
    <string name="bpartner_title">Business Partner Info</string>
    <string name="bpartner_list_title">Business Partner List</string>
    <string name="dialog_title_confirm_save">Save</string>
    <string name="dialog_message_confirm_save">Save information?</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_message_require_company_name_error">Please enter the company\'s name</string>
    <string name="dialog_title_confirm_delete">Delete</string>
    <string name="dialog_message_confirm_delete">Delete this record?</string>
    <string name="auditor_title">Auditor Info</string>
    <string name="auditor_list_title">Auditor List</string>
    <string name="listTitle">Item List</string>
    <string name="checklist_list_title">Checklist List</string>
    <string name="checklist_title">Checklist</string>
    <string name="sheet_list_title">Sheet List</string>
    <string name="sheet_title">Sheet Info</string>
    <string name="sheet_name">Sheet Name</string>
    <string name="bpartner">Business Partner</string>
    <string name="checklist">Checklist</string>
    <string name="auditor_name">Auditor Name</string>
    <string name="action_evaluate">รายการประเมิน</string>
    <string name="main_menu_halq_checklist">HAL-Q Checklist</string>
    <string name="menu_checklist_uri">Checklist.class</string>
    <string name="menu_bpartner_uri">Bpartner.class</string>
    <string name="title_activity_checklist_detail_activity_tab_view">ChecklistDetailActivityTabView</string>
    <string name="title_activity_item_list">ItemListActivity</string>

</resources>