<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="left" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sheet_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_above="@+id/layoutButtom"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sheet_name"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="10dp"
            android:inputType="text"
            >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvBpartner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bpartner"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/spBpartner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvChecklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checklist"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:layout_marginTop="10dp"/>
		<Spinner
            android:id="@+id/spChecklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        

        
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButtom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/btnDiscard"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_discard" 
            android:layout_weight="1"
            android:onClick="buttonClick"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_delete"
            android:onClick="buttonClick" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:enabled="false"
            android:text="@string/button_save" 
            android:layout_weight="1"
            android:onClick="buttonClick"
            />
    </LinearLayout>

</RelativeLayout>