<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
        <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_partner"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
 	<ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layoutTop"
        android:layout_above="@+id/layoutButtom"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="@dimen/list_padding"
        android:paddingRight="@dimen/list_padding" 
        android:transcriptMode="alwaysScroll"/>
 	<LinearLayout
        android:id="@+id/layoutButtom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" >

 	    <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_delete" 
            android:layout_weight="1"
            android:enabled="false"/>
             
        <Button
            android:id="@+id/btnNew"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_new" 
            android:layout_weight="1"/>

        
    </LinearLayout>
</RelativeLayout>